Δημιουργήθηκε με το Colaboratory

--- a/segm_w_on_the_fly_augm.ipynb
+++ b/segm_w_on_the_fly_augm.ipynb
@@ -6,7 +6,7 @@
       "name": "segm_w_on_the_fly_augm.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPiMgY2oafPhG7Ak0L0nK7r",
+      "authorship_tag": "ABX9TyOBN/HaPjY7vuQxRD+L5oT8",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -32,25 +32,49 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "O0XXCeIchGU0"
+        "id": "O0XXCeIchGU0",
+        "outputId": "57ab84be-c775-4388-a236-a8a21927903e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "from google.colab import drive\n",
         "drive.mount('/content/gdrive')"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Mounted at /content/gdrive\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "WO1FperIhjwE"
+        "id": "WO1FperIhjwE",
+        "outputId": "1cd103ae-7dbf-49c0-a0d1-24ac805e974f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "%cd gdrive/MyDrive/my_icdar"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "/content/gdrive/MyDrive/my_icdar\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -67,7 +91,7 @@
         "from google.colab import files\n",
         "from gm_networks import unet_model"
       ],
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -183,17 +207,6 @@
       },
       "source": [
         "model.save('my_model')"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "ph1i7kUBhjXQ"
-      },
-      "source": [
-        "%rm -rf my_model/"
       ],
       "execution_count": null,
       "outputs": []
