--- a/inference.ipynb
+++ b/inference.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "inference.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPkSa1j7lxjDThomw5qJUe7",
+      "collapsed_sections": [],
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,9 +28,24 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "aI6b5ASeVHqt"
+      },
+      "source": [
+        "#TODO:\n",
+        "- Load the model\n",
+        "- Get the input size for the model inputs\n",
+        "- Divide the input image into the appropriate number of patches, with patch size equal to the input size of the model\n",
+        "- Pass all the patches through the network to make predictions\n",
+        "- Merge all the outputs of the patches so that they create an predicted image with the size of the input image  \n",
+        "- Visualize the results in a \"Input image - Predicted mask - Ground truth\" plot."
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
-        "id": "oGPb9-tyUgdk"
+        "id": "VAcsZ7XxW7XL"
       },
       "source": [
         ""
