Δημιουργήθηκε με το Colaboratory

--- a/inference.ipynb
+++ b/inference.ipynb
@@ -49,6 +49,7 @@
         "id": "OJW0LXLzICDY"
       },
       "source": [
+        "# Mount google drive and move to the project directory\n",
         "from google.colab import drive\n",
         "drive.mount('/content/gdrive')\n",
         "\n",
@@ -63,9 +64,34 @@
         "id": "VAcsZ7XxW7XL"
       },
       "source": [
-        "from tensorflow import keras"
+        "from tensorflow import keras\n",
+        "import os"
       ],
-      "execution_count": 2,
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "a0lOP-N2mp6W"
+      },
+      "source": [
+        "# Display a list with the available models and ask the user to choose which to use\n",
+        "models_path = 'models'\n",
+        "models_list = os.listdir(models_path)\n",
+        "\n",
+        "# create a dictionary with numbers as keys and the model names as values\n",
+        "models2dict = dict([(str(a), b) for a, b in enumerate(models_list)])\n",
+        "\n",
+        "print('List of Models', '--------------', sep='\\n')\n",
+        "for item in models2dict.items():\n",
+        "    print(*item, sep=' --> ')\n",
+        "\n",
+        "print('\\nChoose a model from the list by typing the number of its key + Enter:')\n",
+        "x = input()\n",
+        "print(f'\\n{models2dict[x]} was selected.')"
+      ],
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -74,9 +100,21 @@
         "id": "2x5kHDiEGt4k"
       },
       "source": [
+        "# Load the model\n",
         "model = keras.models.load_model('models/Unet_inputsize_512_epochs50_stepsperepoch56')"
       ],
-      "execution_count": 3,
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "zjCDgytknwoJ"
+      },
+      "source": [
+        "print(model.summary())"
+      ],
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -85,17 +123,8 @@
         "id": "bV6_F_A-I4hc"
       },
       "source": [
-        "a = model.get_layer(index=0)"
-      ],
-      "execution_count": 5,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "KwAGFooTJENg"
-      },
-      "source": [
+        "# Retrieve the input layer and extract the size of width of the images (which is equal to the height)\n",
+        "input_layer = model.get_layer(index=0)\n",
         "a.input_shape[0][1]"
       ],
       "execution_count": null,
