Δημιουργήθηκε με το Colaboratory

--- a/inference.ipynb
+++ b/inference.ipynb
@@ -49,7 +49,7 @@
         "id": "OJW0LXLzICDY"
       },
       "source": [
-        "# Mount google drive and move to the project directory\n",
+        "# Mount google drive and move to the project's directory\n",
         "from google.colab import drive\n",
         "drive.mount('/content/gdrive')\n",
         "\n",
@@ -112,6 +112,7 @@
         "id": "zjCDgytknwoJ"
       },
       "source": [
+        "# Display the model's architecture\n",
         "print(model.summary())"
       ],
       "execution_count": null,
