Δημιουργήθηκε με το Colaboratory

--- a/inference.ipynb
+++ b/inference.ipynb
@@ -34,8 +34,8 @@
       },
       "source": [
         "#TODO:\n",
-        "- Load the model\n",
-        "- Get the input size for the model inputs\n",
+        "- Load the model (Done)\n",
+        "- Get the input size for the model inputs (Done)\n",
         "- Divide the input image into the appropriate number of patches, with patch size equal to the input size of the model\n",
         "- Pass all the patches through the network to make predictions\n",
         "- Merge all the outputs of the patches so that they create a predicted image with the size of the input image  \n",
@@ -64,8 +64,10 @@
         "id": "VAcsZ7XxW7XL"
       },
       "source": [
+        "import \n",
         "from tensorflow import keras\n",
-        "import os"
+        "import matplotlib.pyplot as plt\n",
+        "from patchify import patchify"
       ],
       "execution_count": null,
       "outputs": []
@@ -126,7 +128,31 @@
       "source": [
         "# Retrieve the input layer and extract the size of width of the images (which is equal to the height)\n",
         "input_layer = model.get_layer(index=0)\n",
-        "a.input_shape[0][1]"
+        "input_size = a.input_shape[0][1]"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "_fiLgoAGVqKp"
+      },
+      "source": [
+        "x_initial_valid = plt.imread('validation/201-INPUT.jpg')\n",
+        "y_initial_valid = plt.imread('validation/201-OUTPUT-GT.png')\n",
+        "print(x_initial_valid.shape, y_initial_valid.shape, sep='\\n' )"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Rjc-22iiWKRc"
+      },
+      "source": [
+        "patches = patchify(x_initial_valid, ())"
       ],
       "execution_count": null,
       "outputs": []
