Δημιουργήθηκε με το Colaboratory

--- a/segm_w_on_the_fly_augm.ipynb
+++ b/segm_w_on_the_fly_augm.ipynb
@@ -2,6 +2,7 @@
   "nbformat": 4,
   "nbformat_minor": 0,
   "metadata": {
+    "accelerator": "GPU",
     "colab": {
       "name": "segm_w_on_the_fly_augm.ipynb",
       "provenance": [],
@@ -9,13 +10,12 @@
       "include_colab_link": true
     },
     "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
+      "display_name": "Python 3",
+      "name": "python3"
     },
     "language_info": {
       "name": "python"
-    },
-    "accelerator": "GPU"
+    }
   },
   "cells": [
     {
@@ -184,7 +184,7 @@
         "y_datagen = ImageDataGenerator(**y_datagen_args)\n",
         "\n",
         "# Setting the same seed number for both generators leads to the same random alterations for both generators\n",
-        "seed = 17\n",
+        "seed = 18\n",
         "x_datagen.fit(x_train, augment=True, seed=seed)\n",
         "y_datagen.fit(y_train, augment=True, seed=seed)\n",
         "\n",
@@ -203,7 +203,7 @@
       },
       "source": [
         "INITIAL_FILTERS = 32\n",
-        "EPOCHS = 50\n",
+        "EPOCHS = 100\n",
         "STEPS_PER_EPOCH = TRAIN_IMAGES_NUMBER // BATCH_SIZE"
       ],
       "execution_count": null,
@@ -215,6 +215,7 @@
         "id": "wwG7zHnrDka3"
       },
       "source": [
+        "# Define the model and train\n",
         "model = unet_model(input_shape=(NEW_SIZE, NEW_SIZE, 3), initial_filters=INITIAL_FILTERS)\n",
         "model.summary()\n",
         "model.compile(optimizer='adam',\n",
@@ -232,19 +233,11 @@
         "id": "AqagtySHcLPg"
       },
       "source": [
+        "# save the model and history of the training (loss, accuracy)\n",
         "model_path = f'models/Unet_fitgen_inputsize{NEW_SIZE}_initialfilters{INITIAL_FILTERS}_epochs{EPOCHS}_stepsperepoch{STEPS_PER_EPOCH}'\n",
-        "model.save(model_path)"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "Vp5mxShYuEPQ"
-      },
-      "source": [
-        "np.save('models/history.npy', history.history)"
+        "model.save(model_path)\n",
+        "history_path = f'models/Unet_fitgen_inputsize{NEW_SIZE}_initialfilters{INITIAL_FILTERS}_epochs{EPOCHS}_stepsperepoch{STEPS_PER_EPOCH}_history'\n",
+        "np.save('models/', history.history)"
       ],
       "execution_count": null,
       "outputs": []
