function 'create_dataset_from_one_image' was created

--- a/segm_w_on_the_fly_augm.ipynb
+++ b/segm_w_on_the_fly_augm.ipynb
@@ -3,16 +3,6 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "colab_type": "text",
-    "id": "view-in-github"
-   },
-   "source": [
-    "<a href=\"https://colab.research.google.com/github/gerasimos-matidis/my_icdar/blob/main/segm_w_on_the_fly_augm.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
     "id": "KslpdmUtsrRq"
    },
    "source": [
@@ -21,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "id": "0m3L9i6n-cCC"
    },
@@ -33,12 +23,12 @@
     "from tensorflow import keras\n",
     "from keras_preprocessing.image import ImageDataGenerator\n",
     "from gm_networks import unet_model\n",
-    "from utils import center_crop"
+    "from utils import center_crop, normalize_data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "id": "4D3hgHsHvHrt"
    },
@@ -49,13 +39,13 @@
     "# For outputs: initial_dimensions = (width, height) ---> new_dimensions = (1, width, height, 1)\n",
     "x_initial_train = plt.imread('train/101-INPUT.jpg')\n",
     "y_initial_train = plt.imread('train/101-OUTPUT-GT.png')\n",
-    "#x_initial_train = np.expand_dims(x_initial_train, 0) \n",
-    "#y_initial_train = np.expand_dims(y_initial_train, (0, -1)) "
+    "x_initial_train = np.expand_dims(x_initial_train, 0) \n",
+    "y_initial_train = np.expand_dims(y_initial_train, (0, -1)) "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "id": "b62OZ7Rx9Un7"
    },
@@ -86,23 +76,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {
     "id": "edooZbHm8GG2"
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(512, 512)\n",
-      "(6360, 8300)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(model.output_shape[1:3])\n",
-    "print(y_initial_train.shape)\n",
+    "print(x_initial_train.shape[-1] + y_initial_train.shape[-1])\n",
     "# TODO: center_crop the y_initial_train tensor"
    ]
   },
@@ -111,7 +92,33 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def create_dataset_from_one_image(input_image, target_image, new_images_number, new_image_size, mode=''):\n",
+    "    \n",
+    "    concatenated_images = np.concatenate([input_image, target_image], -1)\n",
+    "    \n",
+    "    croped_images = np.zeros([new_images_number, new_image_size, new_image_size, concatenated_images.shape[-1]])\n",
+    "    \n",
+    "    for i in range(new_images_number):\n",
+    "    \n",
+    "        t = tf.image.random_crop(concatenated_images, size=[1, new_image_size, new_image_size, 4])\n",
+    "        croped_images[i] = t[0]\n",
+    "    \n",
+    "    # Separate the inputs from the outputs to create the final batches\n",
+    "    input_dataset = croped_images[:, :, :, :-1]\n",
+    "    target_dataset = np.expand_dims(croped_images[:, :, :, -1], -1)\n",
+    "    \n",
+    "    return input_dataset, target_dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x_train, y_train = create_dataset_from_one_image(x_initial_train, y_initial_train, TRAIN_IMAGES_NUMBER, 512)"
+   ]
   },
   {
    "cell_type": "code",
@@ -126,7 +133,7 @@
     "# Concatenate the respective inputs and outputs to ensure that they will undergo the same crop\n",
     "concatenated_images_train = np.concatenate([x_initial_train, y_initial_train], -1)\n",
     "\n",
-    "# Initialize the tensors for the training batches\n",
+    "# Initialize the tensor for the training batches\n",
     "croped_images_train = np.zeros([TRAIN_IMAGES_NUMBER, new_size, new_size, 4])\n",
     "\n",
     "# Random croping\n",
@@ -134,12 +141,56 @@
     "    \n",
     "    t = tf.image.random_crop(concatenated_images_train, size=[1, new_size, new_size, 4])\n",
     "    croped_images_train[i] = t[0]\n",
+    "    \n",
     "# Separate the inputs from the outputs to create the final batches\n",
     "x_train = croped_images_train[:, :, :, :-1]\n",
-    "y_train = np.expand_dims(croped_images_train[:, :, :, 3], -1)\n",
+    "y_train = np.expand_dims(croped_images_train[:, :, :, -1], -1)\n",
     "\n",
-    "if PADDING == 'valid':\n",
-    "    y_train = center_crop(y_train, model.output_shape[1:3])\n"
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(x_train.shape)\n",
+    "print(y_train.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x_train.max()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "plt.imshow((x_train[3] - x_train[3].min() )/ (x_train[3].max() - x_train[3].min()))\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "print(x_train[0, 50:100, 50:100].astype(np.uint8))"
    ]
   },
   {
@@ -239,7 +290,6 @@
    },
    "outputs": [],
    "source": [
-    "import os\n",
     "# save the model and history of the training (loss, accuracy)\n",
     "model_path = f'models/Unet_inputsize{new_size}_initialfilters{INITIAL_FILTERS}_padding_{PADDING}_epochs{EPOCHS}' #TODO: loss and metric'\n",
     "model.save(model_path)\n"
