--- a/segm_w_augm_data.ipynb
+++ b/segm_w_augm_data.ipynb
@@ -26,9 +26,9 @@
    "source": [
     "# Model/training hyperparameters\n",
     "INPUT_SHAPE = (512, 512, 3)\n",
-    "CROPPING_MODE = 'random_patches'  # (Options: independent_patches, overlapped_patches, random_patches)\n",
-    "TRAIN_IMAGES_NUMBER = 192\n",
-    "PATCHES_STEP = None\n",
+    "CROPPING_MODE = 'random_patches'  # (copy-paste a mode from: independent_patches, overlapped_patches, random_patches)\n",
+    "TRAIN_IMAGES_NUMBER = 713  # required only for 'random_patches' mode\n",
+    "PATCHES_STEP = None  # required only for 'overlapped_patches' mode\n",
     "INITIAL_FILTERS = 32\n",
     "BATCH_SIZE = 8\n",
     "EPOCHS = 200"
@@ -140,7 +140,7 @@
     "# Define the model and train\n",
     "model = unet_model(input_shape=INPUT_SHAPE, initial_filters=INITIAL_FILTERS)\n",
     "model.compile(optimizer='adam',\n",
-    "              loss=tf.keras.losses.BinaryCrossentropy(),\n",
+    "              loss=keras.losses.BinaryCrossentropy(),\n",
     "              metrics=['accuracy'])\n",
     "\n",
     "history = model.fit(train_generator, steps_per_epoch=steps_per_epoch, epochs=EPOCHS)"
@@ -154,7 +154,7 @@
    "outputs": [],
    "source": [
     "# save the model and history of the training (loss, accuracy)\n",
-    "model_path = f'trained_models/full_001/vvvvunet_inputsize{INPUT_SHAPE[0]}_initialfilters{INITIAL_FILTERS}_{CROPPING_MODE}_initialimagesnumber{x_train.shape[0]}_optimizerAdam_lr{\"{:0.4f}\".format(model.optimizer.lr.value().numpy())}_epochs{EPOCHS}' #TODO: loss and metric'\n",
+    "model_path = f'trained_models/full_001/unet_inputsize{INPUT_SHAPE[0]}_initialfilters{INITIAL_FILTERS}_initialimagesnumber{x_train.shape[0]}_{CROPPING_MODE}_optimizerAdam_lr{\"{:0.4f}\".format(model.optimizer.lr.value().numpy())}_epochs{EPOCHS}' #TODO: loss and metric'\n",
     "model.save(model_path)\n",
     "np.save(os.path.join(model_path, 'history'), history.history)"
    ]
@@ -166,14 +166,6 @@
    "metadata": {},
    "outputs": [],
    "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0572ada4",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -181,9 +173,9 @@
    "hash": "5afde5fb8be75fa4232c2400db5e0de612e5b75b692446a76c1449fdda253404"
   },
   "kernelspec": {
-   "display_name": "Python 3.9.12 ('deepenv')",
+   "display_name": "Python [conda env:deepenv] *",
    "language": "python",
-   "name": "python3"
+   "name": "conda-env-deepenv-py"
   },
   "language_info": {
    "codemirror_mode": {
