I added a validation dataset during the training

--- a/segm_w_augm_data.ipynb
+++ b/segm_w_augm_data.ipynb
@@ -26,12 +26,12 @@
    "source": [
     "# Model/training hyperparameters\n",
     "INPUT_SHAPE = (512, 512, 3)\n",
-    "CROPPING_MODE = 'random_patches'  # (copy-paste a mode from: independent_patches, overlapped_patches, random_patches)\n",
-    "TRAIN_IMAGES_NUMBER = 713  # required only for 'random_patches' mode\n",
+    "CROPPING_MODE = 'independent_patches'  # (copy-paste a mode from: independent_patches, overlapped_patches, random_patches)\n",
+    "TRAIN_IMAGES_NUMBER = None # required only for 'random_patches' mode\n",
     "PATCHES_STEP = None  # required only for 'overlapped_patches' mode\n",
     "INITIAL_FILTERS = 32\n",
     "BATCH_SIZE = 8\n",
-    "EPOCHS = 200"
+    "EPOCHS = 150"
    ]
   },
   {
@@ -45,8 +45,10 @@
     "# For inputs: initial_dimensions = (width, height, 3) ---> new_dimensions = (1, width, height, 3)\n",
     "# For outputs: initial_dimensions = (width, height) ---> new_dimensions = (1, width, height, 1)\n",
     "\n",
-    "x_initial_train = plt.imread('train/101-INPUT.jpg')\n",
-    "y_initial_train = plt.imread('train/101-OUTPUT-GT.png')"
+    "x_initial_train = plt.imread('train/101-INPUT.jpg').astype('float32')[650:-550]\n",
+    "y_initial_train = plt.imread('train/101-OUTPUT-GT.png')[650:-550]\n",
+    "x_initial_valid = plt.imread('validation/201-INPUT.jpg').astype('float32') [500:-50]\n",
+    "y_initial_valid = plt.imread('validation/201-OUTPUT-GT.png')[500:-50]"
    ]
   },
   {
@@ -62,7 +64,31 @@
     "                                                 INPUT_SHAPE[0], \n",
     "                                                 mode=CROPPING_MODE, \n",
     "                                                 new_images_number=TRAIN_IMAGES_NUMBER, \n",
-    "                                                 patches_step=PATCHES_STEP)"
+    "                                                 patches_step=PATCHES_STEP)\n",
+    "\n",
+    "training_images_number = x_train.shape[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3194b806",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# create a validation dataset\n",
+    "x_valid, y_valid = create_dataset_from_one_image(x_initial_valid, \n",
+    "                                                 y_initial_valid, \n",
+    "                                                 INPUT_SHAPE[0], \n",
+    "                                                 mode='independent_patches')\n",
+    "\n",
+    "# select a subset from the validation dataset equal to 33% of the training dataset\n",
+    "val_data_size = training_images_number // 3\n",
+    "perm = np.random.permutation(training_images_number)\n",
+    "x_valid = x_valid[perm][:val_data_size]\n",
+    "y_valid = y_valid[perm][:val_data_size]\n",
+    "\n",
+    "print(x_valid.shape)"
    ]
   },
   {
@@ -134,7 +160,6 @@
    "outputs": [],
    "source": [
     "training_images_number = x_train.shape[0]\n",
-    "print(x_train.shape[0])\n",
     "steps_per_epoch = training_images_number // BATCH_SIZE\n",
     "\n",
     "# Define the model and train\n",
@@ -143,7 +168,11 @@
     "              loss=keras.losses.BinaryCrossentropy(),\n",
     "              metrics=['accuracy'])\n",
     "\n",
-    "history = model.fit(train_generator, steps_per_epoch=steps_per_epoch, epochs=EPOCHS)"
+    "history = model.fit(train_generator, \n",
+    "                    steps_per_epoch=steps_per_epoch, \n",
+    "                    epochs=EPOCHS,\n",
+    "                    validation_data=(x_valid, y_valid)\n",
+    "                   )"
    ]
   },
   {
@@ -153,8 +182,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "parent_path = 'models/f001_w_val_data'\n",
+    "\n",
+    "if not os.path.exists(parent_path):\n",
+    "    os.makedirs(parent_path)\n",
+    "\n",
     "# save the model and history of the training (loss, accuracy)\n",
-    "model_path = f'trained_models/full_001/unet_inputsize{INPUT_SHAPE[0]}_initialfilters{INITIAL_FILTERS}_initialimagesnumber{x_train.shape[0]}_{CROPPING_MODE}_optimizerAdam_lr{\"{:0.4f}\".format(model.optimizer.lr.value().numpy())}_epochs{EPOCHS}' #TODO: loss and metric'\n",
+    "model_name = f'unet_inputsize{INPUT_SHAPE[0]}_initialfilters{INITIAL_FILTERS}_initialimagesnumber{x_train.shape[0]}_{CROPPING_MODE}_optimizerAdam_lr{\"{:0.4f}\".format(model.optimizer.lr.value().numpy())}_epochs{EPOCHS}' #TODO: loss and metric'\n",
+    "model_path = os.path.join(parent_path, model_name)\n",
     "model.save(model_path)\n",
     "np.save(os.path.join(model_path, 'history'), history.history)"
    ]
@@ -173,9 +208,9 @@
    "hash": "5afde5fb8be75fa4232c2400db5e0de612e5b75b692446a76c1449fdda253404"
   },
   "kernelspec": {
-   "display_name": "Python [conda env:deepenv] *",
+   "display_name": "Python 3.9.12 ('deepenv')",
    "language": "python",
-   "name": "conda-env-deepenv-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
