--- a/plot_predictions.ipynb
+++ b/plot_predictions.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "executionInfo": {
      "elapsed": 2827,
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "executionInfo": {
      "elapsed": 2140,
@@ -83,21 +83,21 @@
    "source": [
     "# Load the input and ground truth images \n",
     "#d1 = askdirectory()\n",
-    "x = askopenfilename(initialdir='.', title='Select input image from validation data')\n",
-    "y = askopenfilename(title='Select output image from validation data')\n",
-    "x_initial_valid = plt.imread(x)\n",
-    "y_initial_valid = plt.imread(y)\n",
+    "x = askopenfilename(initialdir='.', title='Select input image from test data')\n",
+    "y = askopenfilename(title='Select output image from test data')\n",
+    "x_initial_test = plt.imread(x)\n",
+    "y_initial_test = plt.imread(y)\n",
     "\n",
     "CROP_SIZE_W = 3072 \n",
     "CROP_SIZE_H = 3072\n",
     "\n",
-    "x_initial_valid = center_crop(x_initial_valid, (CROP_SIZE_H, CROP_SIZE_W))\n",
-    "y_initial_valid = center_crop(y_initial_valid, (CROP_SIZE_H, CROP_SIZE_W))"
+    "x_initial_test = center_crop(x_initial_test, (CROP_SIZE_H, CROP_SIZE_W))\n",
+    "y_initial_test = center_crop(y_initial_test, (CROP_SIZE_H, CROP_SIZE_W))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "executionInfo": {
      "elapsed": 186,
@@ -116,8 +116,8 @@
     "INPUT_SHAPE = (512, 512, 3)\n",
     "PATCHES_STEP = 256\n",
     "\n",
-    "input_patches = np.squeeze(patchify(x_initial_valid, INPUT_SHAPE, step=PATCHES_STEP))\n",
-    "ground_truth_patches = np.squeeze(patchify(y_initial_valid, INPUT_SHAPE[:-1], step=PATCHES_STEP))\n",
+    "input_patches = np.squeeze(patchify(x_initial_test, INPUT_SHAPE, step=PATCHES_STEP))\n",
+    "ground_truth_patches = np.squeeze(patchify(y_initial_test, INPUT_SHAPE[:-1], step=PATCHES_STEP))\n",
     "\n",
     "x = np.reshape(input_patches, ((-1, ) + input_patches.shape[-3:]))\n",
     "y = np.reshape(ground_truth_patches, ((-1, ) + ground_truth_patches.shape[-2:]))\n",
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -144,22 +144,7 @@
     "id": "ewwQ13xJdf93",
     "outputId": "3b26a25d-a5c1-40d8-cc3b-58efe7c63f40"
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Loading ==> unet_input512_filters32_images160_independent_patches_optAdam_lr0.0010_eps150\n",
-      "4/4 [==============================] - 6s 789ms/step\n",
-      "Loading ==> unet_input512_filters32_images160_random_patches_optAdam_lr0.0010_eps150\n",
-      "4/4 [==============================] - 1s 237ms/step\n",
-      "Loading ==> unet_input512_filters32_images589_overlapped_patches_optAdam_lr0.0010_eps150\n",
-      "4/4 [==============================] - 1s 287ms/step\n",
-      "Loading ==> unet_input512_filters32_images589_random_patches_optAdam_lr0.0010_eps150\n",
-      "4/4 [==============================] - 1s 253ms/step\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Display a list with the available models and ask the user to choose which to use\n",
     "models_path = askdirectory(initialdir='.', title='Select the directory with the models' )\n",
@@ -173,7 +158,7 @@
     "for modelname in models_list:\n",
     "    print(f'Loading ==> {modelname}')\n",
     "    model = keras.models.load_model(os.path.join(models_path, modelname))\n",
-    "    splitted_modelname = modelname.split('_')[3:6]\n",
+    "    splitted_modelname = modelname.split('_')[3:]\n",
     "    prediction = np.squeeze(model.predict(x))\n",
     "    binarized_prediction = np.where(prediction > 0.5, 1, 0)\n",
     "    loss = np.zeros([patches_num, 1])\n",
@@ -189,14 +174,16 @@
     "        'initial images': splitted_modelname[0].replace('images', ''),\n",
     "        'model output': binarized_prediction,\n",
     "        'loss': loss,\n",
-    "        'mean_iou': mean_iou\n",
+    "        'mean_iou': mean_iou,\n",
+    "        'epochs': splitted_modelname[-1].replace('eps', '')\n",
     "    }\n",
-    "    predictions.append(d)"
+    "    predictions.append(d)\n",
+    "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
     "executionInfo": {
      "elapsed": 967,
@@ -217,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {
     "executionInfo": {
      "elapsed": 948,
