--- a/inference.ipynb
+++ b/inference.ipynb
@@ -510,9 +510,9 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python [conda env:deepenv] *",
    "language": "python",
-   "name": "python3"
+   "name": "conda-env-deepenv-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -524,7 +524,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.2"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
