--- a/net_eval.ipynb
+++ b/net_eval.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "id": "VAcsZ7XxW7XL"
    },
@@ -20,11 +20,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "id": "a0lOP-N2mp6W"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "List of Models\n",
+      "--------------\n",
+      "0 --> unet_input512_filters32_images160_independent_patches_optAdam_lr0.0010_eps150\n",
+      "1 --> unet_input512_filters32_images160_independent_patches_optAdam_lr0.0010_eps500\n",
+      "2 --> unet_input512_filters32_images160_random_patches_optAdam_lr0.0010_eps150\n",
+      "3 --> unet_input512_filters32_images160_random_patches_optAdam_lr0.0010_eps500\n",
+      "4 --> unet_input512_filters32_images589_overlapped_patches_optAdam_lr0.0010_eps150\n",
+      "5 --> unet_input512_filters32_images589_overlapped_patches_optAdam_lr0.0010_eps500\n",
+      "6 --> unet_input512_filters32_images589_random_patches_optAdam_lr0.0010_eps150\n",
+      "7 --> unet_input512_filters32_images589_random_patches_optAdam_lr0.0010_eps500\n",
+      "\n",
+      "Choose a model from the list by typing the number of its key + Enter:\n",
+      "5\n",
+      "\n",
+      "unet_input512_filters32_images589_overlapped_patches_optAdam_lr0.0010_eps500 was selected.\n"
+     ]
+    }
+   ],
    "source": [
     "# Display a list with the available models and ask the user to choose which to use\n",
     "models_path = 'models/f001_w_val_data'\n",
@@ -46,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "id": "2x5kHDiEGt4k"
    },
@@ -58,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "id": "bV6_F_A-I4hc"
    },
@@ -71,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "id": "_fiLgoAGVqKp"
    },
@@ -90,12 +112,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "id": "SOPVSWF23qJY",
     "outputId": "fbd75ecc-84cb-4397-f327-31624905ab03"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(4000, 4000, 3)\n",
+      "(4000, 4000)\n"
+     ]
+    }
+   ],
    "source": [
     "print(x_initial_test.shape)\n",
     "print(y_initial_test.shape)"
@@ -196,13 +227,6 @@
     "name = \"prediction_\" + model_name\n",
     "np.save(os.path.join(models_path, name), x_and_y_and_predictions)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
